# cmakeDemo

./: .gitignore  .gitmodules  LICENSE  README.md
00_helloworld/: hello  hello.cpp  makefile
01_hellocmake/: main.cpp  makefile
02_hellocmake/: CMakeLists.txt  answer.cpp
03_hellocmake_with_lib/: CMakeLists.txt  main.cpp
03_hellocmake_with_lib/answer/: CMakeLists.txt  answer.cpp
03_hellocmake_with_lib/answer/include/answer/: answer.hpp
04_hellocmake_with_3rd_lib/: main.cpp
04_hellocmake_with_3rd_lib/answer/: answer.cpp
04_hellocmake_with_3rd_lib/answer/include/answer/: answer.hpp
06_cmake_with_cache_variable/answer/: CMakeLists.txt  answer.cpp
07_cmake_with_header_only_lib/answer/: CMakeLists.txt
